# FerrisInfer

./: .gitignore  Cargo.toml  README.md
crates/ferrisinfer-cli/: Cargo.toml
crates/ferrisinfer-cli/src/: main.rs
crates/ferrisinfer-core/: Cargo.toml
crates/ferrisinfer-core/src/: device.rs  dtype.rs  error.rs  layout.rs  lib.rs  shape.rs  tensor.rs
crates/ferrisinfer-io/: Cargo.toml
crates/ferrisinfer-io/src/: ferris.rs  gguf.rs  hf.rs  json.rs  lib.rs  safetensors.rs  source.rs  tokenizer.rs
crates/ferrisinfer-kernel/: Cargo.toml
crates/ferrisinfer-kernel/src/: backend.rs  lib.rs
crates/ferrisinfer-kernel/src/cpu/: attention.rs  elementwise.rs  matmul.rs  mod.rs  reduction.rs
crates/ferrisinfer-kernel/src/gpu/: mod.rs  nvidia.rs
crates/ferrisinfer-model/: Cargo.toml
crates/ferrisinfer-model/src/: config.rs  decoder.rs  lib.rs  spec.rs  weights.rs
crates/ferrisinfer-runtime/: Cargo.toml
crates/ferrisinfer-runtime/src/: block_manager.rs  engine.rs  kv_cache.rs  lib.rs  paged_kv.rs  plan.rs  prefix_index.rs  reference.rs  sampler.rs  scheduler.rs  sequence.rs  session.rs
docs/: architecture.md  performance-roadmap.md  system_prompt_short.md  system_prompt_short_legacy.md  参考提示词.md
docs/前沿论文/Attention_Residuals/: Attention_Residuals.md
