[workspace]
members = [
    "crates/ferrisinfer-cli",
    "crates/ferrisinfer-core",
    "crates/ferrisinfer-io",
    "crates/ferrisinfer-kernel",
    "crates/ferrisinfer-model",
    "crates/ferrisinfer-runtime",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["FerrisInfer Contributors"]
repository = "https://github.com/Micro-ATP/FerrisInfer"
homepage = "https://github.com/Micro-ATP/FerrisInfer"
description = "Pure Rust from-scratch LLM inference framework and libraries."

[workspace.dependencies]
ferrisinfer-core = { version = "0.1.0", path = "crates/ferrisinfer-core" }
ferrisinfer-io = { version = "0.1.0", path = "crates/ferrisinfer-io" }
ferrisinfer-kernel = { version = "0.1.0", path = "crates/ferrisinfer-kernel" }
ferrisinfer-model = { version = "0.1.0", path = "crates/ferrisinfer-model" }
ferrisinfer-runtime = { version = "0.1.0", path = "crates/ferrisinfer-runtime" }

[profile.dev]
opt-level = 2
