[package]
name = "ferrisinfer-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
ferrisinfer-io.workspace = true
ferrisinfer-kernel.workspace = true
ferrisinfer-model.workspace = true
ferrisinfer-runtime.workspace = true

