[package]
name = "ferrisinfer-io"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
ferrisinfer-core.workspace = true
ferrisinfer-model.workspace = true

